Revision history for Class::Simple::Readonly::Cached

0.11
	Use gtar to create a distribution on Macs
	Use Test::DescribeMe to simplify tests
	Support CircleCI
	Added t/30-basics.t

0.10	Sat Jun 22 10:22:42 EDT 2024
	Added can() and isa() methods
	Commented out what I believe is legacy code
	No need to deref $rc twice
	Calling new on an object now returns a clone rather than setting the defaults in the new object

0.09	Mon Mar 13 18:43:13 EDT 2023
	Warn if we're caching an object that's already cached, then return
		the previously cached object

0.08	Sat Apr 30 15:03:33 EDT 2022
	Warn if $object is a scalar in new()
	Warn if you're trying to cache an object that's already being cached
	When a function returns an object, cache that object (TODO)

0.07	Fri Jan  8 18:52:37 EST 2021
	Improved handling of return values including undef

0.06	Thu Dec 17 14:38:12 EST 2020
	Was falsely claiming retrieval of an array after a scalar retrieval
		is a cache hit

0.05	Thu 17 Oct 09:36:27 EDT 2019
	Improved caching of functions that return 0
	Better testing that caching actually caches everywhere
	Added stats() call

0.04	Fri 11 Oct 19:38:38 EDT 2019
	Object shouldn't be instantiated if cache argument is not given
	Improved handling of scalar then array call on same method

0.03	Sun Sep 29 05:12:19 PDT 2019
	Added the object() method

0.02	Fri Sep 27 03:43:56 PDT 2019
	Added hash mode

0.01	Sun 22 Sep 10:01:14 EDT 2019
        First Version