@@ -5,6 +5,7 @@ Revision history for Class::Simple::Readonly::Cached
 	Use Test::DescribeMe to simplify tests
 	Support CircleCI
 	Added t/30-basics.t
+	Better argument testing to new()
 
 0.10	Sat Jun 22 10:22:42 EDT 2024
 	Added can() and isa() methods
